Fixed: calendar days properly marked when "Today" button clicked

--- a/README
+++ b/README
@@ -7,3 +7,9 @@ It supports multiple users.
 For instructions see "Kotivox-manual.pdf".
 
 Kotivox is an open source project, licensed under the Apache License, Version 2.0.
+
+dsource.org repository:
+http://www.dsource.org/projects/kotivox/browser
+
+github repository
+http://github.com/dev1/kotivox
