--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Kotivox is a diary program, which organizes your entries
 by date. You can mark paragraphs by categories you created
 and later search within those categories.
+Take notes, and record your progress with Seinfeld's chains.
 Kotivox will encrypt and password-protect your data.
 It supports multiple users.
 
